uopdated readme, removed storekit file, bugfix